[package]
name = "rosumemory-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
sysinfo = "0.29.0"
thiserror = "1.0.40"
whoami = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "std",
  "basetsd",
  "minwindef",
  "handleapi",
  "memoryapi",
  "processthreadsapi",
  "winnt",
] }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.3.2"
